--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postbuild": "next-sitemap",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -44,6 +45,7 @@
     "negotiator": "^1.0.0",
     "next": "15.3.2",
     "next-i18next": "^15.4.2",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "plaiceholder": "^3.0.0",
     "postcss": "^8.5.3",
